# remedio-check

./: .env  .gitignore  Dockerfile  README.md  api_medicamento.py  app.py  pyproject.toml  requirements.txt  setup.sql  test_integracao.py
.github/workflows/: ci.yml
src/: api_medicamento.py  app.py  db.py
tests/: conftest.py  test_app.py  test_db.py  test_integracao.py
