[project]
name = "remedio-check"
version = "2.0.0"
description = "Checklist de medicamentos via CLI para auxiliar no controle de remédios diários."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "supabase>=2.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
